task-103589 layout issue

--- a/application/views/scss/pages/_login.scss
+++ b/application/views/scss/pages/_login.scss
@@ -17,6 +17,7 @@ $btn-focus-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 
         padding-top: 2.5rem;
         margin: 0 auto;
         max-width: 500px;
+        width: 100%;
 
         &-logo {
             margin: 0 auto;
